<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E5社区</string>
    <string name="action_settings">Settings</string>
    <!-- 主页面 -->
    <string name="VegetableMarket">菜市场</string>
    <string name="GoodsMarket">日用百货</string>
    <string name="CommunityServics">社区服务</string>
    <string name="NearMarket">附近商家</string>
    <string name="Job">聘</string>
    <string name="SecondHand">淘</string>
    <string name="GroupPurchase">团</string>
    <string name="RentalInformation">租</string>
    <string name="userInfo">用户信息</string>
    <!-- 右边抽屉 -->
    <string name="mycart">购物车</string>
    <string name="myFav">我的收藏</string>
    <string name="mySend">我的发布</string>
    <string name="SendRentalInfo">发布出租</string>
    <string name="SendResumeInfo">发布简历</string>
    <string name="SendSecondhandInfo">发布二手</string>
    <string name="SendGroupPurchaseInfo">发布团购</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    <!-- 出租页面 -->
    <string name="retalInfo">房屋租赁</string>
    <string name="rent_out">出租</string>
    <string name="rent_in">求租</string>
    <!-- 浮动窗口 -->
    <string name="modal_goods_count_text">购买数量</string>
    <string name="modal_goods_operation_text_wait">暂不购买</string>
    <string name="modal_goods_operation_text_cancle">删除</string>

    <!-- 登陆页 -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="toRegister">注册账号</string>

    <!-- 注册页面 -->
    <string name="register">注册</string>
    <string name="repassword">确认密码</string>

    <!-- 定位页面 -->
    <string name="searchCommunity">小区查询</string>
    <string name="searchCommunityInfo">输入小区中文名或拼音</string>
    <string name="findCommunityInfo">定位到小区</string>
    <string name="gotoCommunitynow">立即进入社区</string>
    <string name="recentCommunityInfo">最近访问到的小区</string>
    <string name="hotCommunity">热门小区</string>
    <!-- 出租发布页面 -->
    <string name="community_name">社  区:</string>
    <string name="rental_adress">住 址:</string>
    <string name="rental_title">标 题:</string>
    <string name="rental_style">户 型:</string>
    <string name="rental_price">租 金:</string>
    <string name="rental_describe">介 绍:</string>
    <string name="rental_add_picture">添加照片</string>
    <string name="rental_submit">提 交</string>

    <!-- 自动更新 -->
    <string name="text_update_title">新版本提示</string>
    <string name="text_update_btn_confirm">去更新</string>
    <string name="text_update_btn_cancel">下次再说</string>

    <!-- 网络出错 -->
    <string name="text_dialog_netconn_title">没有可用的网络</string>
    <string name="text_dialog_netconn_msg">请开启GPRS或WIFI网路连接</string>
    <string name="text_dialog_netconn_btn_open_wireless">开启网络</string>
    <string name="text_dialog_know">我知道了</string>

    <!-- 设置 -->
    <string name="this_catagory">本期目录</string>
    <string name="settings_display_title">显示</string>
    <string name="settings_function_title">功能</string>
    <string name="settings_reply_title">用户反馈</string>
    <string name="settings_update_title">升级</string>
    <string name="settings_other_title">其它</string>
    <string name="no_image_title">开启无图模式</string>
    <string name="no_image_summary">更快的加载速度，同时节省流量</string>
    <string name="text_size_title">文字大小</string>
    <string name="clear_cache">清空缓存</string>
    <string name="reply">向开发团队吐槽</string>
    <string name="update_app">检查更新</string>
    <string name="copyright_title">版权所有</string>

    <!-- 退出 -->
    <string name="alteout">你确定要退出吗?</string>
    <string name="out">退出</string>
    <string name="cancel">取消</string>
    <string name="login_out_warn">确定退出登录吗?</string>

</resources>