<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <!-- 取消EditText进入就弹出键盘 -->

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/search_margin_left"
        android:padding="5dp"
        android:text="@string/searchCommunity" />

    <EditText
        android:id="@+id/ed_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/activity_location_search"
        android:hint="@string/searchCommunityInfo"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/search_margin_left"
        android:padding="10dp"
        android:text="@string/findCommunityInfo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/search_margin_left"
            android:src="@drawable/activity_location_getlocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gotoCommunitynow"
            android:textSize="@dimen/search_big_textsize" />

        <Button
            android:id="@+id/btn_goto_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/search_margin_left"
            android:background="@drawable/btn_orange_selector"
            android:gravity="center"
            android:text="福星花园"
            android:textColor="@color/abs__background_holo_light" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/search_margin_left"
        android:padding="10dp"
        android:text="@string/recentCommunityInfo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/search_margin_left"
        android:padding="10dp"
        android:text="@string/hotCommunity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black" />

    <ListView
        android:id="@+id/lv_hot_community"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>