<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <ImageView
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_gravity="center"
        android:layout_marginTop="@null"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/Et_register_username"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="40.0dip"
            android:layout_marginRight="40.0dip"
            android:background="@drawable/register_edittext_bg_selector"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:paddingLeft="8.0dip"
            android:textSize="15.0sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/Et_register_password"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="40.0dip"
            android:layout_marginRight="40.0dip"
            android:background="@drawable/register_edittext_bg_selector"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="8.0dip"
            android:textSize="15.0sp" >
        </EditText>

        <EditText
            android:id="@+id/Et_register_password_confirm"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="40.0dip"
            android:layout_marginRight="40.0dip"
            android:background="@drawable/register_edittext_bg_selector"
            android:ems="10"
            android:hint="@string/repassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="8.0dip"
            android:textSize="15.0sp" >
        </EditText>

        <Button
            android:id="@+id/Bt_register_ok"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="40.0dip"
            android:layout_marginRight="40.0dip"
            android:layout_marginTop="25dip"
            android:background="@drawable/guide_button_blue_background_selector"
            android:onClick="onRegister"
            android:text="@string/register"
            android:textColor="@color/abs__background_holo_light" />
    </LinearLayout>

</LinearLayout>